chore: fix dark mode

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,5 @@
 @media (min-width: 1024px) { 
     body {
         display: none;
-        font-family: 'Roboto', sans-serif !important;
     }
 }
